--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <style>
       body {
         margin: 0;
+        position: relative;
+        min-height: 100vh;
       }
       nav {
         float: left;
@@ -12,6 +14,7 @@
         float: right;
         width: 60%;
         padding-right: 210px;
+        margin-bottom: 50px;
       }
       aside {
         position: absolute;
@@ -19,7 +22,7 @@
       }
       footer {
         color: white;
-        position: absolute;
+        position: fixed;
         bottom: 0;
         width: 100%;
         text-align: center;
